--- a/wowtogo/docker-compose-dev.yaml
+++ b/wowtogo/docker-compose-dev.yaml
@@ -18,11 +18,17 @@ services:
       - "--log=true"
       - "--log.filePath=/logs/traefik.log"
       - "--log.level=DEBUG"
+      - "--certificatesresolvers.letsencrypt.acme.email=${CF_API_EMAIL}"
+      - "--certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json"
+      - "--certificatesresolvers.letsencrypt.acme.dnschallenge=true"
+      - "--certificatesresolvers.letsencrypt.acme.dnschallenge.provider=cloudflare"
+      - "--certificatesresolvers.letsencrypt.acme.dnschallenge.delaybeforecheck=0"
+      - "--certificatesresolvers.letsencrypt.acme.dnschallenge.resolvers=1.1.1.1:53,8.8.8.8:53"
     labels:
       - "traefik.http.routers.reverse-proxy-rtr.rule=Host(`${DOMAIN_TRAEFIK}`)"
       - "traefik.http.routers.reverse-proxy-rtr.entrypoints=http"
-      # - "traefik.http.routers.reverse-proxy-rtr.tls=true"
-      # - "traefik.http.routers.reverse-proxy-rtr.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.reverse-proxy-rtr.tls=true"
+      - "traefik.http.routers.reverse-proxy-rtr.tls.certresolver=letsencrypt"
       - "traefik.http.routers.reverse-proxy-rtr.service=api@internal"
       - "traefik.http.middlewares.traefik-auth.basicauth.users=${TRAEFIK_AUTH}"
       - "traefik.http.middlewares.traefik-auth.basicauth.removeheader=true"
@@ -30,6 +36,10 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - traefik-logs:/logs
+      - ./letsencrypt:/letsencrypt
+    environment:
+      - CF_API_EMAIL=${CF_API_EMAIL}
+      - CF_API_KEY=${CF_API_KEY}
     networks:
       - traefik
 
@@ -46,8 +56,8 @@ services:
       - "traefik.http.services.frontend.loadbalancer.server.port=80"
       - "traefik.http.routers.frontend.rule=Host(`${DOMAIN_FRONTEND}`)"
       - "traefik.http.routers.frontend.entrypoints=http"
-      # - "traefik.http.routers.frontend.tls=true"
-      # - "traefik.http.routers.frontend.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.frontend.tls=true"
+      - "traefik.http.routers.frontend.tls.certresolver=letsencrypt"
 
   # backend:
   #   image: profileorg/wowtogo-be-dev:latest
