--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -25,3 +25,13 @@ tasks:
       - docker volume prune -f
       - rm -rf ./letsencrypt
     interactive: true
+
+
+  update-app-*:
+    vars:
+      ENVIRONMENT: '{{index .MATCH 0}}'
+    dir: ./wowtogo
+    cmds:
+      - docker compose -f docker-compose-{{.ENVIRONMENT}}.yaml down frontend backend
+      - docker compose --env-file .env -f docker-compose-{{.ENVIRONMENT}}.yaml pull frontend backend
+      - docker compose --env-file .env -f docker-compose-{{.ENVIRONMENT}}.yaml up -d frontend backend
