--- a/ticketo/.env.example
+++ b/ticketo/.env.example
@@ -5,7 +5,10 @@ DOMAIN_FRONTEND=
 DOMAIN_BACKEND=
 DOMAIN_OPENFGA=
 CF_API_EMAIL=
-CF_API_KEY=
+# CF_API_KEY=
+CF_DNS_API_TOKEN=
+CF_ZONE_API_TOKEN=
+
 
 # BACKEND
 AUTH0_AUDIENCE=
@@ -28,3 +31,7 @@ BE_PG_DATABASE=
 # OPENFGA
 FGA_PG_USERNAME=
 FGA_PG_PASSWORD=
+
+# Watchtower
+WATCHTOWER_NOTIFICATION_URL=
+WATCHTOWER_NOTIFICATION_TEMPLATE=
