--- a/ticketo/docker-compose-base.yaml
+++ b/ticketo/docker-compose-base.yaml
@@ -118,7 +118,7 @@ services:
       - "traefik.http.routers.pgadmin.entrypoints=https"
       - "traefik.http.routers.pgadmin.tls=true"
       - "traefik.http.routers.pgadmin.tls.certresolver=letsencrypt"
-      # - "traefik.http.services.pgadmin.loadbalancer.server.port=80"
+      - "traefik.http.services.pgadmin.loadbalancer.server.port=80"
     volumes:
       - pgadmin_data:/var/lib/pgadmin
 
