--- a/ticketo/.env.example
+++ b/ticketo/.env.example
@@ -23,6 +23,10 @@ MAIL_SENDER_NAME=
 MAIL_SENDER_EMAIL=
 MAIL_TEMPLATE_ID=
 
+PAYOS_CLIENT_ID=
+PAYOS_API_KEY=
+PAYOS_CHECKSUM_KEY=
+
 # DB
 BE_PG_USERNAME=
 BE_PG_PASSWORD=
